--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-libpag-webpack-demo",
+  "name": "libpag-vue3-vite-demo",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,10 +7,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-vue": "^2.1.0",
+    "rollup-plugin-copy": "^3.4.0",
     "vue": "^3.2.25"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^2.0.0",
     "libpag": "^0.0.2",
     "vite": "^2.7.2"
   }
